# RamblerTestTask

./: CMakeLists.txt  README.md
.github/workflows/: congif.yml
src/: AdvAuction.cpp  AdvAuction.h  main  main.cpp
tests/: main  test_runner.h  tests.cpp  tests.h
